--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -256,12 +256,11 @@
 							//将当前model中id塞到数组
 							tempArray.push(tempModel0.PublisherId);
 							//合并数组,点赞的人
-							for(var i in tempModel0.LikeUsers){
-								tempArray = tempArray.concat(tempModel0.LikeUsers[i].userid);
-//								tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
+							for(var i in tempModel0.LikeUsers) {
+								tempArray = tempArray.concat(tempModel0.LikeUsers[i].userId);
+								//								tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
 							}
-							
-							
+
 							//循环当前model中的回复数组
 							for(var item1 in tempModel0.Comments) {
 								//回复中的model
@@ -305,8 +304,8 @@
 										//遍历点赞的人
 										for(var item2 in tempModel0.LikeUsers) {
 											//										console.log('item2;;;;;==' + tempModel.utid + ',' + tempModel0.LikeUsers[item2]);
-											if(tempModel.utid == tempModel0.LikeUsers[item2].userid) {
-//												tempModel0.LikeUsers.splice(item2, 1, tempModel);
+											if(tempModel.utid == tempModel0.LikeUsers[item2].userId) {
+												//												tempModel0.LikeUsers.splice(item2, 1, tempModel);
 												tempModel0.LikeUsers[item2] = $.extend(tempModel0.LikeUsers[item2], tempModel);
 											}
 										}
@@ -786,6 +785,7 @@
 
 			var personalImage = tempModel.uimg;
 			var personalName;
+			console.log('tempModel.ugname='+tempModel.ugname)
 			if(tempModel.ugname) {
 				personalName = events.shortForString(tempModel.ugname, 15);
 			} else {
@@ -998,8 +998,12 @@
 						//将当前model中id塞到数组
 						tempArray.push(tempModel0.PublisherId);
 						//合并数组,点赞的人
-						tempArray = tempArray.concat(tempModel0.LikeUsers);
-						tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
+						for(var i in tempModel0.LikeUsers) {
+							tempArray = tempArray.concat(tempModel0.LikeUsers[i].userId);
+							//								tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
+						}
+						//						tempArray = tempArray.concat(tempModel0.LikeUsers);
+						//						tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
 						//循环当前model中的回复数组
 						for(var item1 in tempModel0.Comments) {
 							//回复中的model
@@ -1043,8 +1047,9 @@
 									//遍历点赞的人
 									for(var item2 in tempModel0.LikeUsers) {
 										//										console.log('item2;;;;;==' + tempModel.utid + ',' + tempModel0.LikeUsers[item2]);
-										if(tempModel.utid == tempModel0.LikeUsers[item2]) {
-											tempModel0.LikeUsers.splice(item2, 1, tempModel);
+										if(tempModel.utid == tempModel0.LikeUsers[item2].userId) {
+											//												tempModel0.LikeUsers.splice(item2, 1, tempModel);
+											tempModel0.LikeUsers[item2] = $.extend(tempModel0.LikeUsers[item2], tempModel);
 										}
 									}
 									//									//对比id是否一致
