删除无用界面

--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -50,11 +50,17 @@
 		</div>
 
 		<script src="../../js/mui.min.js"></script>
+		<!--图片预览js-->
 		<script src="../../js/mui.zoom.js "></script>
+		<!--图片预览JS-->
 		<script src="../../js/mui.previewimage.js "></script>
+		<!--公共事件方法-->
 		<script src="../../js/utils/events.js"></script>
+		<!--接口-->
 		<script src="../../js/publicProtocol.js"></script>
+		<!--作业接口-->
 		<script src="../../js/publicHomeworkProtocol.js"></script>
+		<!--本页js文件-->
 		<script src="../../js/homework/homework-comment.js"></script>
 	</body>
 
