--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -22,38 +22,53 @@
 		<div class="mui-content">
 			<div class="input-content">
 				<textarea id="input-content" placeholder="请输入内容" value=""></textarea>
-				<!--一期暂时不插入图片-->
+				<!--放置图片-->
 				<div id="take_pic" class="take_pic">
 					<a class="mui-icon iconfont icon-xiangji"></a>
 				</div>
+				<!--录像功能-->
 				<div id="take_camero" class="take_camero">
 					<a class="mui-icon iconfont icon-shipin"></a>
 				</div>
+				<!--图库选择-->
 				<div id="get_gallery" class="get_gallery">
-					<a class="mui-icon iconfont icon-xiangce"></a>
+					<a class="mui-icon iconfont icon-tuku"></a>
 				</div>
 			</div>
 			<div id="pictures" class="img-container temWork-teaHint"></div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
+		<!--七牛-->
 		<script src="../../js/qiniu/qiniu.js"></script>
+		<!--相机-->
 		<script src="../../js/utils/camera.js"></script>
+		<!--压缩-->
 		<script type="text/javascript" src="../../js/utils/compress.js"></script>
+		<!--加密-->
 		<script src="../../js/utils/cryption.js"></script>
+		<!--上传至七牛JS文件-->
 		<script src="../../js/utils/CloudFileUtil.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
+		<!--图片预览js-->
 		<script src="../../js/mui.zoom.js"></script>
+		<!--图片预览js-->
 		<script src="../../js/cloud/mui.previewimage.js"></script>
+		<!--作业接口-->
 		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
+			//mui加载
 			mui.init();
+			//个人id
 			var personalUTID;
 			var flag = 0
 			//作业model
 			var homeworkModel;
+			//plusready的回调
 			mui.plusReady(function() {
+				//加载预览方法
 				mui.previewImage();
+				//加载监听
 				window.addEventListener('homeworkInfo', function(e) {
 					CloudFileUtil.files = [];
 					events.clearChild(document.getElementById('pictures'));
@@ -64,6 +79,7 @@
 					console.log('学生做作业界面从上级界面获取的做作业数据：' + JSON.stringify(homeworkModel));
 					flag = 0;
 				})
+				//作业详情监听
 				window.addEventListener('workDetail', function(e) {
 					CloudFileUtil.files = [];
 					events.clearChild(document.getElementById('pictures'));
@@ -78,6 +94,7 @@
 						CloudFileUtil.setPic(files[i], 1);
 					}
 				})
+				//回答作业按钮
 				events.addTap('publish', function() {
 					if(flag == 0) {
 						requestSubmitHomeworkResult();
@@ -86,13 +103,14 @@
 					}
 
 				})
+				//加载各种监听
 				setListener();
 			});
 
 			var setListener = function() {
 				//删除图标的点击事件
 				CloudFileUtil.setDelPicListener();
-				//录音键
+				//发布图片
 				events.addTap('take_pic', function() {
 					if(CloudFileUtil.files.length < 9) {
 						camera.getPic(camera.getCamera(), function(picPath) {
@@ -133,11 +151,8 @@
 						mui.toast('上传图片附件不得多于9张！');
 					}
 				});
-				//相机按钮
+				//录像按钮
 				events.addTap('take_camero', function() {
-					//				camera.getPic(camera.getCamera(), function(picPath) {
-					//					console.log("picPath:" + picPath);
-					//				})
 					mui.toast('功能暂未开放！');
 				});
 				//相册按钮
@@ -280,6 +295,7 @@
 					}
 				});
 			}
+			//重写系统返回方法
 			var old_back = mui.back;
 			mui.back = function() {
 				var textView = document.getElementById('input-content');
