--- a/JiaoBaoYun-hb/html/qiuzhi/atExpert.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/atExpert.html
@@ -11,6 +11,9 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
+		<style type="text/css">
+
+		</style>
 
 	</head>
 
@@ -21,21 +24,24 @@
 			<a id="publish" class="mui-pull-right">完成</a>
 		</header>
 
-		<div class="mui-content">
-			<ul id="ExpertList" class="mui-table-view">
-				<!--<li class="mui-table-view-cell mui-media">
+		<div class="mui-content mui-scroll-wrapper">
+			<div class="mui-scroll">
+				<ul id="ExpertList" class="mui-table-view">
+					<!--<li class="mui-table-view-cell mui-media">
 						<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png">
 						<div class="mui-media-body">
 							李欣芸
 							<p class='mui-ellipsis'>今天上课表现良好</p>
 						</div>
 					</li>-->
-				<ul/>
-
+					<ul/>
+			</div>
 		</div>
 		<script type="text/javascript">
+			mui.init();
+			mui(".mui-scroll-wrapper").scroll();
 			var datasource;
-			var selectedExpert=[]
+			var selectedExpert = []
 			mui.plusReady(function() {
 				datasource = plus.webview.currentWebview().data;
 				selectedExpert = plus.webview.currentWebview().selectedExpert
@@ -77,11 +83,11 @@
 				}
 				var box = document.getElementsByClassName('checkbox');
 				for(var i = 0; i < box.length; i++) {
-					console.log(datasource[i].UserId+"------"+selectedExpert)
-					for(var j=0;j<selectedExpert.length;j++)
-					if(datasource[i].UserId == selectedExpert[j]) {
-						box[i].checked = true;
-					}
+					console.log(datasource[i].UserId + "------" + selectedExpert)
+					for(var j = 0; j < selectedExpert.length; j++)
+						if(datasource[i].UserId == selectedExpert[j]) {
+							box[i].checked = true;
+						}
 
 				}
 
