--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -1,6 +1,6 @@
+<!--求知回答问题，添加评论界面-->
 <!doctype html>
 <html>
-
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
@@ -22,7 +22,9 @@
 			<div class="mui-scroll">
 				<!--<p id="askTitle" style="font-size: 14px;margin-top: 12px;word-wrap: break-word;padding: 0 15px;text-align: justify;"></p>-->
 				<!--<div class="input-content">-->
+					<!--输入框-->
 				<textarea id="answerContent" class="" placeholder="添加回答,最多4000字"></textarea>
+				<!--额外附件-->
 				<div class="extras-info">
 					<div id="take_pic" class="take_pic file-extras">
 						<a class="mui-icon iconfont icon-xiangji1"></a>
@@ -40,18 +42,25 @@
 					</div>
 				</div>
 				<!--</div>-->
-
+				<!--显示附件控件-->
 				<div id="pictures" style="width: 100%;"></div>
 			</div>
 		</div>
 
 		<script src="../../js/mui.min.js"></script>
+		<!--公共事件js-->
 		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
+		<!--相机js-->
 		<script src="../../js/utils/camera.js"></script>
-		<script src="../../js/utils/CloudFileUtil.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/utils/compress.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/utils/cryption.js" type="text/javascript" charset="utf-8"></script>
+		<!--七牛js-->
 		<script src="../../js/qiniu/qiniu.js" type="text/javascript" charset="utf-8"></script>
+		<!--加密js-->
+		<script src="../../js/utils/cryption.js" type="text/javascript" charset="utf-8"></script>
+		<!--压缩文件js-->
+		<script src="../../js/utils/compress.js" type="text/javascript" charset="utf-8"></script>
+		<!--上传至七牛云js-->
+		<script src="../../js/utils/CloudFileUtil.js" type="text/javascript" charset="utf-8"></script>
+		<!--求知接口js-->
 		<script src="../../js/publicQiuzhiProtocol.js" type="text/javascript" charset="utf-8"></script>
 
 		<script type="text/javascript">
@@ -116,7 +125,9 @@
 				})
 				setListener();
 			});
+			//设置监听
 			var setListener = function() {
+				//拍照
 				events.addTap('take_pic', function() {
 					if(CloudFileUtil.files.length < 9) {
 						camera.getPic(camera.getCamera(), function(picPath) {
@@ -172,9 +183,11 @@
 						mui.toast('上传图片附件不得多于9张！');
 					}
 				});
+				//录像
 				events.addTap('take_camero', function() {
 					mui.toast('此功能暂未开放');
 				});
+				//相册
 				events.addTap('get_gallery', function() {
 					if(CloudFileUtil.files.length < 9) {
 						var picCount = 0; //上传图片计数
@@ -279,7 +292,7 @@
 					thumbnail: getTypeAddress(CloudFileUtil.files).encImg,
 					cutImg: getTypeAddress(CloudFileUtil.files).clipAddress,
 					answerMan: personalUTID, //回答人
-					isAnonym: isAnonymNo
+					isAnonym: isAnonymNo//
 				};
 				// 等待的对话框
 				var wd = events.showWaiting();
@@ -353,7 +366,6 @@
 					}
 				})
 			}
-			var imgs = [];
 
 			//删除图标的点击事件
 			CloudFileUtil.setDelPicListener();
