增加返回上一个界面收回键盘

--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -311,6 +311,7 @@
 			 * 初始化数据
 			 */
 			function initData() {
+				events.blurBack();
 				main = plus.webview.currentWebview(); //获取当前窗体对象
 				mainData = main.data; //接收页面传入的参数值
 				//var mainData = {
