--- a/JiaoBaoYun-hb/html/mine/qun_manage_info.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info.html
@@ -110,6 +110,7 @@
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
+				events.blurBack();
 				var qunImgPath = '';
 				var qname = document.getElementById("gname"); //群名称
 				var qnote = document.getElementById("gnote"); //群说明
