--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
@@ -104,6 +104,7 @@
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
+				events.blurBack();
 				//				var Width = plus.screen.resolutionWidth;
 				//				var marginLeft = (Width) / 8 + 'px';
 				//addQunImg(); //显示上传群头像的图标
