--- a/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
@@ -332,6 +332,7 @@
 			 * 初始化监听
 			 */
 			function initListener() {
+				events.blurBack();
 
 				//搜索
 				document.getElementById("label_search").addEventListener('tap', function() {
