--- a/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
@@ -25,6 +25,7 @@
 
 			mui.init();
 			mui.plusReady(function() {
+				events.blurBack();
 				mui("#loading").button('loading'); //切换为loading状态
 
 				//---获取数据---start---
