--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -1,3 +1,4 @@
+<!--与我相关子界面-->
 <!DOCTYPE html>
 <html>
 
@@ -18,23 +19,17 @@
 		  <div class="mui-scroll">
 		    <!--数据列表-->
 		    <ul id="list-container" class="mui-table-view">
-
-		      
 		    </ul>
 		  </div>
 		</div>
-		<!--<footer id="footer" class="display-none">
-			<div class="footer-center">
-				<input id='msg-content' type="text" class='input-text'></input>
-			</div>
-			<button id='btn-reply' class="mui-btn  btn-commit">提交</button>
-		</footer>-->
 		<script src="../../js/mui.min.js"></script>
-		<!--<script type="text/javascript" src="../../js/quan/aboutme.js"></script>-->
+		<!--公共事件js-->
 		<script src="../../js/utils/events.js"></script>
+		<!--公共接口-->
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<!--作业接口-->
 		<script type="text/javascript" src="../../js/publicHomeworkProtocol.js" ></script>
-		<!--<script src="../../js/utils/native.js"></script>-->
+		<!--本页js-->
 		<script src="../../js/quan/about-me.js"></script>
 	</body>
 
