--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -1,3 +1,4 @@
+<!--班级空间子页面-->
 <!doctype html>
 <html>
 
@@ -6,9 +7,13 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<!--图片预览css-->
 		<link href="../../css/utils/preview.css" rel="stylesheet" />
+		<!--泡泡css-->
 		<link href="../../css/utils/bubble.css" rel="stylesheet" />
+		<!--阿里图标库样式表-->
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<!--班级空间样式表-->
 		<link href="../../css/quan/class_space.css" rel="stylesheet" />
 
 	</head>
@@ -23,6 +28,7 @@
 			</div>
 
 		</div>
+		<!--点赞图标点击后的弹出框-->
 		<div id="popover" class="mui-popover">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell">
@@ -39,15 +45,16 @@
 			</ul>
 		</div>
 		<script src="../../js/mui.min.js"></script>
-		<!--<script type="text/javascript">
-			mui.init()
-		</script>-->
+		<!--公共事件js-->
 		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/storageKeyName.js"></script>
+		<!--接口js-->
 		<script src="../../js/publicProtocol.js"></script>
+		<!--图片预览js-->
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
+		<!--url跳转-->
 		<script src="../../js/utils/urlBrief.js"></script>
+		<!--班级空间js-->
 		<script src="../../js/quan/class_space.js"></script>
 	</body>
 
