--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -1,12 +1,14 @@
+<!--群组成员个人信息界面-->
 <!doctype html>
 <html>
-
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<!--公用样式表-->
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<!--本页样式表-->
 		<link href="../../css/quan/group-pInfo.css" rel="stylesheet" />
 	</head>
 
@@ -56,8 +58,11 @@
 			</ul>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<!--公共事件js-->
 		<script src="../../js/utils/events.js"></script>
+		<!--接口js-->
 		<script src="../../js/publicProtocol.js"></script>
+		<!--本页js-->
 		<script src="../../js/quan/group-pInfo.js"></script>
 	</body>
 
