--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -1,4 +1,4 @@
-<!--發佈班級動態頁面-->
+<!--发布班级动态界面-->
 <!--@anthor an-->
 <!doctype html>
 <html>
@@ -8,8 +8,9 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<!--公共样式-->
 		<link href="../../css/utils/common.css" rel="stylesheet" />
-		<!--<link href="../../css/quan/class_space.css" rel="stylesheet" />-->
+		<!--输入框公共样式-->
 		<link href="../../css/quan/custom-textarea.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 	</head>
@@ -18,6 +19,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">班级动态</h1>
+			<!--发布公共样式按钮-->
 			<a id="publish" class="mui-icon mui-pull-right mui-plus-visible" style="padding-left: 30px;padding-top: 15px;font-size: 16px;">发布</a>
 		</header>
 		<div class="mui-content">
@@ -25,35 +27,40 @@
 			<textarea id="input-content" placeholder="请输入内容" value=""></textarea>
 			<!--一期暂时不插入图片-->
 			<div class="extras-info">
+				<!--拍照-->
 				<div id="take_pic" class="take_pic">
 					<a class="mui-icon iconfont icon-xiangji1"></a>
 				</div>
+				<!--录像-->
 				<div id="take_camero" class="take_camero">
 					<a class="mui-icon iconfont icon-shipin"></a>
 				</div>
+				<!--相册-->
 				<div id="get_gallery" class="get_gallery">
 					<a class="mui-icon iconfont icon-tuku"></a>
 				</div>
 			</div>
-			<!--</div>-->
+			<!--附件显示控件-->
 			<div id="pictures" class="img-container temWork-teaHint"></div>
 		</div>
 	</body>
 	<script src="../../js/mui.min.js"></script>
-
+	<!--公共方法-->
 	<script src="../../js/utils/events.js"></script>
+	<!--七牛js-->
 	<script src="../../js/qiniu/qiniu.js"></script>
+	<!--相机js-->
 	<script src="../../js/utils/camera.js"></script>
+	<!--压缩js-->
 	<script type="text/javascript" src="../../js/utils/compress.js"></script>
+	<!--加密-->
 	<script src="../../js/utils/cryption.js"></script>
+	<!--云服务js-->
 	<script src="../../js/utils/CloudFileUtil.js"></script>
-	<!--<script src="../../js/utils/files.js"></script>
-	<script src="../../js/utils/ASFiles.js"></script>-->
+	<!--公共接口-->
 	<script src="../../js/publicProtocol.js"></script>
 	<script type="text/javascript">
-		mui.init()
-	</script>
-	<script>
+		mui.init();
 		var personIds = []; //人员id
 		//		var imgs;//图片
 		mui.plusReady(function() {
@@ -64,17 +71,7 @@
 			CloudFileUtil.files = [];
 			events.clearChild(document.getElementById('pictures'));
 			getGroupPersons(groupInfo.classId);
-			//界面监听传值
-			//			window.addEventListener('postGroupInfo', function(e) {
-			//				
-			//				groupInfo = e.detail.data;
-			//				console.log('发布动态页面获取的值：' + JSON.stringify(groupInfo));
-			//				
-			//				
-			//			});
-			/**
-			 * 加载监听
-			 */
+			//加载删除附件监听
 			CloudFileUtil.setDelPicListener();
 			//拍照上传图片至七牛云
 			events.addTap('take_pic', function() {
@@ -119,9 +116,6 @@
 			});
 			//获取录像按钮
 			events.addTap('take_camero', function() {
-				//				camera.getVideo(camera.getCamera(), function(path) {
-				//
-				//				});
 				mui.toast('功能暂未开放！');
 			});
 			/**
