--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -38,42 +38,6 @@
 				<ul id="gride" class="mui-table-view mui-grid-view mui-grid-9" style="background-color: transparent;">
 
 				</ul>
-
-				<!--<div style="">
-					<div id="segmentedControl" class="mui-segmented-control mui-segmented-control-primary">
-
-						<a class="mui-control-item mui-active" href="#item1">
-							家长
-						</a>
-						<a class="mui-control-item" href="#item2">
-							老师
-						</a>
-						<a class="mui-control-item" href="#item3">
-							学生
-						</a>
-
-					</div>
-				</div>
-				<div id="item1" class="mui-control-content mui-active">
-					<!--学生群组内容-->
-				<!--<ul id="gride1" class="mui-table-view mui-grid-view mui-grid-9"></ul>
-					<!--退群按钮-->
-				<!--<button id="quit-group1" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
-
-				<!--</div>-->
-				<!--<div id="item2" class="mui-control-content">-->
-				<!--老师群组内容-->
-				<!--<ul id="gride2" class="mui-table-view mui-grid-view mui-grid-9"></ul>-->
-				<!--退群按钮-->
-				<!--<button id="quit-group2" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
-
-				<!--</div>-->
-				<!--<div id="item3" class="mui-control-content">-->
-				<!--家长群组内容-->
-				<!--<ul id="gride3" class="mui-table-view mui-grid-view mui-grid-9"></ul>-->
-				<!--退群按钮-->
-				<!--<button id="quit-group3" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
-				<!--</div>-->
 			</div>
 		</div>
 		<div class="quit-container display-none">
@@ -81,7 +45,9 @@
 		</div>
 	</body>
 	<script src="../../js/mui.min.js"></script>
+	<!--公共接口js-->
 	<script src="../../js/publicProtocol.js"></script>
+	<!--公共事件JS-->
 	<script type="text/javascript" src="../../js/utils/events.js"></script>
 	<!--本頁專用JS-->
 	<script type="text/javascript" src="../../js/quan/class-group1.js"></script>
