--- a/JiaoBaoYun-hb/html/quan/classSpace-persons.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-persons.html
@@ -1,6 +1,6 @@
+<!--查看的人和点赞的人列表界面-->
 <!doctype html>
 <html>
-
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
@@ -32,10 +32,12 @@
 	</head>
 
 	<body>
+		<!--标题栏-->
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">标题</h1>
 		</header>
+		<!--列表-->
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<ul id="person-list" class="mui-table-view">
@@ -44,9 +46,13 @@
 		</div>
 
 		<script src="../../js/mui.min.js"></script>
+		<!--公共事件js-->
 		<script src="../../js/utils/events.js"></script>
+		<!--接口js-->
 		<script src="../../js/publicProtocol.js"></script>
-		<script src="../../js/utils/grideControl.js"></script>
+		<!---->
+		<!--<script src="../../js/utils/grideControl.js"></script>-->
+		<!--本页js-->
 		<script src="../../js/quan/classSpace-persons.js"></script>
 	</body>
 
