--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/icons-extra.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
+		<link rel="stylesheet" href="../../css/show/show.css" />
 		<link href="../../css/utils/preview.css" rel="stylesheet" />
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
@@ -22,160 +23,10 @@
 		<script src="../../js/mui.previewimage.js"></script>
 		<script type="text/javascript" src="../../js/quan/dynamiclistitem.js"></script>
 
-		<style>
-			.showAll {
-				display: none;
-				color: #D7D7D7;
-				margin-top: 10px;
-			}
-			
-			.ellipsis-show {
-				/*内容*/
-				display: -webkit-box;
-				overflow: hidden;
-				white-space: normal !important;
-				text-overflow: ellipsis;
-				word-wrap: break-word;
-				-webkit-line-clamp: inherit;
-				-webkit-box-orient: vertical;
-			}
-			
-			.mui-table-view-cell:active {
-				background-color: #FFFFFF;
-			}
-			
-			.mui-table-view {
-				background: #EFEFF4;
-				/*背景色透明*/
-			}
-			
-			.mui-table-view-cell {
-				background: white;
-				/*cell 背景设为白色*/
-				padding: 0;
-				/*内边距为0*/
-				margin-bottom: 10px;
-			}
-			
-			.mui-table-view:before,
-			.mui-table-view:after,
-			.mui-table-view-cell:after {
-				height: 0px;
-				/*去掉横线*/
-			}
-			
-			.mui-table-view-cell {
-				background-color: #fff;
-				margin-top: 1rem;
-			}
-			
-			.mui-row-padding-8px {
-				padding: 8px;
-				/*内边距为8px*/
-				padding: 12px;
-			}
-			
-			.dynamic-personal-image {
-				/*个人头像圆形*/
-				border-radius: 50%;
-				width: 50px;
-				height: 50px;
-			}
-			
-			.dynamic-image-div {
-				/*内容中图片之间的内边距*/
-				padding: 1px;
-			}
-			
-			.dynamic-image {
-				/*内容的图片占全部空间*/
-				width: 100%;
-				height: 100%;
-			}
-			
-			.dynamic-icon,
-			.dynamic-icon-praise,
-			.dynamic-icon-comment,
-			.dynamic-icon-forward {
-				/*点赞，评论，分享的图标*/
-				height: 30px;
-				width: 30px;
-				margin-left: 25px;
-			}
-			
-			.dynamic-icon-Level {
-				/*等级图标*/
-				height: 20px;
-				margin-left: 10px;
-			}
-			
-			.dynamic-icon-praise-small {
-				/*点赞列表的小图标*/
-				height: 15px;
-				width: 15px;
-				margin-right: 5px;
-				margin-bottom: 0px;
-			}
-			
-			.dynamic-margin-top-10px {
-				margin-top: 10px;
-			}
-			
-			.dynamic-padding-left-10px {
-				padding-left: 10px;
-			}
-			
-			.dynamic-line {
-				/*点赞列表上面的横线*/
-				height: 1px;
-				width: 100%;
-				background: #e4e4e4;
-			}
-			
-			.dynamic-contenttext {
-				/*动态内容*/
-				font-family: '微软雅黑 Regular', '微软雅黑';
-				/*字体样式*/
-			}
-			
-			.dynamic-praise-name,
-			.dynamic-comment-name {
-				/*点赞者和评论者的名字*/
-				color: #1A9BFF;
-			}
-			
-			.replyComment {
-				padding-top: 5px;
-			}
-			
-			.dynamic-comment-btn {
-				/*底部的评论按钮*/
-				width: 100%;
-				margin-top: 10px;
-				border-width: 1px;
-				border-color: #e4e4e4;
-			}
-			
-			.dynamic-image-more {
-				/*更多图片*/
-				position: absolute;
-				width: 99%;
-				height: 99%;
-				font-size: 40px;
-				color: white;
-				text-align: center;
-				background-color: rgba(0, 0, 0, 0.3);
-			}
-		</style>
 	</head>
 
 	<body>
-		<footer id="footer" class="mui-bar mui-bar-tab" style="display: none;">
-			<div class="footer-center">
-				<textarea onblur="inputOnblur(this)" id='msg-content' type="text" class='input-text'></textarea>
-			</div>
-			<button id='btn-reply' class="mui-btn mui-btn-green btn-commit" style="background-color: #1db8F1;border-color:#1db8F1 ;">评论</button>
-		</footer>
+
 		<!--下拉刷新容器-->
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
@@ -186,13 +37,6 @@
 			</div>
 
 		</div>
-
-		<!--<div id="comment-popover" class="mui-popover" style="width: 100%;top: 150px;height: 200px;">
-			<ul class="mui-table-view">
-				<img id="closepop" src="../../image/cloud/record_addclassclose.png" style="height: 30px;float: right;margin: 10px;" />
-				<input onblur="inputOnblur(this)" id="inputComment" type="text" class="mui-input-clear" placeholder="请输入评论内容" style="width:80% ;margin-left: 10%;text-align: center;border-radius: 50px;">
-				<button id="addComment" type="button" class="mui-btn mui-btn-blue mui-btn-block" style="border-radius: 50px;height: 40px;width: 80%;left: 10%;padding: 0;">评论</button>
-		</div>-->
 
 	</body>
 
