--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -11,16 +11,6 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/homework/publish-answer.css" rel="stylesheet" />
 		<style type="text/css">
-			html,
-			body {
-				height: 100%;
-				margin: 0px;
-				/*padding: 0px;*/
-				overflow: hidden;
-				-webkit-touch-callout: none;
-				/*-webkit-user-select: none;*/
-			}
-			
 			.mui-checkbox input[type=checkbox]:checked:before,
 			.mui-radio input[type=radio]:checked:before {
 				color: #1db8f1
@@ -85,6 +75,23 @@
 		var utids = [];
 		var pageFlag;;
 		mui.plusReady(function() {
+			
+		plus.io.resolveLocalFileSystemURL("_doc", function(entry) {
+			// 可通过entry对象操作test.html文件 
+			entry.getMetadata(function(metadata) {
+				plus.console.log("Last Modified: " + metadata.modificationTime);
+				entry.getDirectory("savepath", { create: true, exclusive: false }, function(dir) {
+					console.log("Directory Entry Name: " + dir.name);
+				}, function() {
+					alert(e.message);
+				});
+			}, function(e) {
+				alert(e.message);
+			});
+		}, function(e) {
+			alert("Resolve file URL failed: " + e.message);
+		});
+	
 			pageFlag = plus.webview.currentWebview().data
 			var userInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO); //用户id
 
