--- a/JiaoBaoYun-hb/html/check/check-news.html
+++ b/JiaoBaoYun-hb/html/check/check-news.html
@@ -74,8 +74,9 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/mui.pullToRefresh.js"></script>
+		<script src="../../js/mui.pullToRefresh.material.js"></script>
 		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/utils/h5fresh.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/libs/jquery.lazyload.min.js"></script>
 		<script src="../../js/check/check-news.js"></script>
