班级空间查看的人 和点赞的人排序

--- a/JiaoBaoYun-hb/html/quan/classSpace-persons.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-persons.html
@@ -28,6 +28,10 @@
 				height: 4rem;
 				border-radius: 50%;
 			}
+			.person-info>h6{
+				font-size: 15px;
+				color: #323232;
+			}
 		</style>
 	</head>
 
