--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -58,12 +58,12 @@
 			var QNUptoken; //token数据
 			var uploadNum = 0; //记录上传的次数
 			var hideOption; //隐藏键盘的数据
-
+			var persistentId; //记录persistentId
 			var multiMedia; //多媒体控件
 			var notes = document.getElementById("notes"); //输入框
 
 			mui.plusReady(function() {
-				//				events.closeWaiting();
+				//events.closeWaiting();
 				init(); //初始化控件
 				initListener(); //初始化监听
 			});
@@ -90,7 +90,7 @@
 					//					TotalVideo: 1, //视频的个数
 				});
 
-				hideOption = events.initHideKeyBoard();//获取配置信息
+				hideOption = events.initHideKeyBoard(); //获取配置信息
 			}
 
 			/*
@@ -148,13 +148,18 @@
 				postDataPro_addUserSpace(comData, wd, function(data) {
 					console.log('38postDataPro_addUserSpace（用户空间）新增某用户空间信息 （云笔记）.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 					if(data.RspCode == 0) {
-						setTimeout(function() {
-							wd.close();
+						if(persistentId.length != 0) {
+							wd.setTitle('处理中...');
+							setTimeout(function() {
+								waittingThumb(wd);
+							}, 2000);
+						} else {
 							mui.toast('发布成功');
 							pathList = [];
 							events.fireToPageNone('app_notes_main.html', 'refreshView');
+							wd.close();
 							mui.back();
-						}, 2000);
+						}
 					} else {
 						document.getElementById("finish").disabled = false;
 						if(pathList.length != 0) {
@@ -193,6 +198,7 @@
 					console.log('获取上传凭证 ' + JSON.stringify(data));
 					if(data.data.Status == 1) { //成功
 						QNUptoken = data.data; //token数据
+						persistentId = [];
 						var configure = data.configure; //获取token的配置信息
 						console.log('七牛上传凭证:' + JSON.stringify(QNUptoken));
 						console.log('七牛配置信息:' + JSON.stringify(configure));
@@ -281,12 +287,18 @@
 							if(status == 200) {
 								console.log('上传成功');
 								QNUptoken.Data[i].task = true;
+								QNUptoken.Data[i].persistentId = JSON.parse(upload.responseText).persistentId;
 								uploadNum--;
 								var title = '上传 ' + (QNUptoken.Data.length - uploadNum) + "/" + (QNUptoken.Data.length);
 								wd.setTitle(title);
 								//记录失败后需要删除的文件
 								pathList.push(multiMedia.data.PictureArray[num].domain);
 								pathList.push(multiMedia.data.PictureArray[num].thumb);
+								if(persistentId.length < 3) { //前三张
+									persistentId[persistentId.length] = {
+										id: QNUptoken.Data[i].persistentId
+									};
+								}
 								if(uploadNum == 0) {
 									console.log('所有上传都成功');
 									var encAddr = []; //附件地址
@@ -297,7 +309,8 @@
 									}
 									var encAddrStr = encAddr.join('|');
 									var encImgrStr = encImg.join('|');
-									addNote(wd, '1', encAddrStr, encImgrStr)
+									addNote(wd, '1', encAddrStr, encImgrStr);
+
 								} else {
 									taskCreate(wd);
 								}
@@ -343,6 +356,55 @@
 						});
 
 						//停止本次循环
+						break;
+					}
+				}
+			}
+
+			/**
+			 * 查询已生成缩略图
+			 * @param {Object} wd 等待框
+			 */
+			function waittingThumb(wd) {
+				console.log('waittingThumb');
+				for(var i = 0; i < persistentId.length; i++) {
+					if(persistentId[i].code == undefined) {
+						CloudFileUtil.persistentStatusSearch(persistentId[i].id, function(data) {
+							//wd.close();
+							console.log('waittingThumb success' + JSON.stringify(data));
+							if(data.items.length != 0) {
+								var item = data.items[0];
+								if(item.code == 0 || item.code == 3 || item.code == 4) {
+									//0 表示成功，1 表示等待处理，2 表示正在处理，3 表示处理失败，4 表示回调失败
+									persistentId[i].code = item.code;
+								} else if(item.code == 3) {
+									mui.toast('生成缩略图失败 ' + item.error);
+								}
+							}
+
+							var allCallback = true;
+							for(var j = 0; j < persistentId.length; j++) {
+								if(persistentId[j].code == undefined) {
+									allCallback = false;
+									setTimeout(function() {
+										waittingThumb(wd);
+									}, 100);
+									break;
+								}
+							}
+							//所有的图片都生成了缩略图
+							if(allCallback) {
+								mui.toast('发布成功');
+								pathList = [];
+								events.fireToPageNone('app_notes_main.html', 'refreshView');
+								wd.close();
+								mui.back();
+							}
+						}, function(data) {
+							wd.close();
+							console.log('waittingThumb error' + JSON.stringify(data));
+							mui.toast('请求查询缩略图是否生成异常');
+						});
 						break;
 					}
 				}
