--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -285,9 +285,11 @@
 					});
 					folderList = tempList;
 					//选择的文件处理
-					if(document.getElementById(upFile.fileid) != null) {
-						//将上次选择的文件置为未选中状态
-						document.getElementById(upFile.fileid).style.background = 'white';
+					if(upFile.fileid) {
+						if(document.getElementById(upFile.fileid) != null) {
+							//将上次选择的文件置为未选中状态
+							document.getElementById(upFile.fileid).style.background = 'white';
+						}
 					}
 					upFile = null;
 					changeUpBtnColorToDefault();
